--- a/app/src/main/res/layout/fragment_actor.xml
+++ b/app/src/main/res/layout/fragment_actor.xml
@@ -45,6 +45,9 @@
 
 
             <LinearLayout
+                android:layout_marginStart="80dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginEnd="80dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -55,7 +58,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:layout_weight="@integer/film_info_weight_left"
+                    android:layout_weight="25"
                     android:focusable="true"
                     android:foreground="?attr/selectableItemBackground"
                     android:adjustViewBounds="true" />
@@ -64,7 +67,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:layout_weight="@integer/film_info_weight_right"
+                    android:layout_weight="75"
                     android:orientation="vertical">
 
                     <TextView
