--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -4,6 +4,7 @@
     <PreferenceCategory
         android:layout="@layout/custom_title_preference"
         app:title="@string/cat_interface">
+
         <ListPreference
             app:defaultValue="0"
             app:entries="@array/screens"
@@ -14,7 +15,7 @@
             app:useSimpleSummaryProvider="true" />
 
         <ListPreference
-            android:defaultValue="3"
+            android:defaultValue="7"
             app:entries="@array/filmsInRow"
             app:entryValues="@array/filmsInRow"
             app:key="filmsInRow"
@@ -34,9 +35,9 @@
         <CheckBoxPreference
             android:defaultValue="true"
             android:layout="@layout/custom_checkbox_preference"
-            app:key="isAutorotate"
-            app:summary="@string/rotate_hint"
-            app:title="@string/rotate_title" />
+            app:key="autoPlayNextEpisode"
+            app:summary="@string/next_episode_hint"
+            app:title="@string/next_episode_title" />
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -52,7 +53,7 @@
             android:layout="@layout/custom_checkbox_preference"
             app:key="isPlayer"
             app:summary="@string/isplayer_hint"
-            app:title="@string/isplayer_title" />
+            app:title="Использовать стороний плеер" />
 
         <CheckBoxPreference
             android:layout="@layout/custom_checkbox_preference"
@@ -71,7 +72,6 @@
             app:key="isExternalDownload"
             app:summary="@string/isExternalManager_hint"
             app:title="@string/isExternalManager_title" />
-
     </PreferenceCategory>
 
 </PreferenceScreen>
